--- a/style/style.css
+++ b/style/style.css
@@ -18,7 +18,15 @@
     letter-spacing: 2px;
     --title-color: #ee6318;
 
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+
     transition:opacity 1s;
+}
+
+a, a:hover, a:focus, a:active {
+    text-decoration: none;
+    color: inherit;
 }
 
 #title{
@@ -47,14 +55,15 @@ header {
         justify-content: center;
         align-items: center;
         background-color: #4447;
-        height: 90px;
+        height: 60px;
         color: #fff;
         font-weight: bold;
         width: 100%;
         font-size: 1.4em;
         letter-spacing: 4px;
         text-align: center;
-        /* position: absolute; */
+        position: absolute;
+        margin-top:-60px;
     }
 
 /*Information*/
@@ -63,6 +72,7 @@ header {
     width:60%;
     justify-content: center;
     align-items: center;
+    padding-bottom:40px;
 }
 
     #info #title{
@@ -80,7 +90,7 @@ header {
         }
     
         #info #detail{
-            padding-bottom:20px;
+            padding-bottom:10px;
         }
     }
 
@@ -92,11 +102,21 @@ header {
     #body #left_side{
         background-color:#515151;
         height:600px;
-        width:40%;
+        width:37%;
     }
 
     
     #body #title{
-        padding-top:20px;
-        text-align: center;
+        padding-left:5%;
+        padding-top:70px;
+        padding-bottom:20px;
+        text-align: left;
+    }
+    
+    #body #detail{
+        color:#fff;
+        text-align: left;
+        padding:7px 10%;
+        word-wrap: break-word;
+        letter-spacing: 0;
     }
