--- a/style/style.css
+++ b/style/style.css
@@ -48,6 +48,7 @@ header {
 
     header img{
         width:100%;
+        object-fit: cover;
     }
 
     h1 {
@@ -64,6 +65,7 @@ header {
         text-align: center;
         position: absolute;
         margin-top:-60px;
+        overflow:hidden;
     }
 
 /*Information*/
