--- a/style/style.css
+++ b/style/style.css
@@ -73,6 +73,7 @@ header {
     }
 
     h1 {
+        top:0;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -84,7 +85,7 @@ header {
         font-size: 1.4em;
         letter-spacing: 4px;
         text-align: center;
-        position: absolute;
+        position: sticky;
         margin-top:-60px;
         overflow:hidden;
     }
