--- a/style/style.css
+++ b/style/style.css
@@ -26,6 +26,14 @@
     -moz-osx-font-smoothing: grayscale;
 
     transition:opacity 1s;
+    /* word-break: break-all; */
+    word-break: break-word;
+    text-align: justify;
+}
+@media only screen and (max-width: 800px) {
+    *{
+        font-size:12px;
+    }
 }
 
 #sticky{
@@ -55,6 +63,7 @@ a, a:hover, a:focus, a:active {
     font-weight: bold;
     letter-spacing: 3px;
     text-align: left;
+    padding-left:5%;
 }
 
 
@@ -66,6 +75,7 @@ header {
     header #image{
         width:37%;
         display:flex;
+        min-width: 200px;
     }
 
     header img{
@@ -102,12 +112,13 @@ header {
 }
 
     #info #title{
-        padding:5px 0;
+        padding:5px 5%;
     }
 
     #info #detail{
         padding-left:20px;
         padding-bottom:3px;
+        padding-right:5%;
     }
 
     @media only screen and (min-width: 800px) {
@@ -132,6 +143,7 @@ header {
     #body #left_side{
         background-color:#515151;
         width:37%;
+        min-width: 200px;
     }
 
     #body #right_side{
@@ -188,6 +200,12 @@ header {
     padding: 10px 5% 25px 0%;
 }
 
+@media only screen and (max-width: 800px) {
+    #status_bar{
+        width:45%;
+    }
+}
+
     #status_bar h4
     {
         margin-bottom:5px;
@@ -196,14 +214,14 @@ header {
     #status_bar div{
         width:100%;
         height:20px;
-        border-radius: 5px;
+        border-radius: 4px;
         background-color: var(--title-color-fade);
     }
 
     #status_bar div div{
         width:40%;
         height:100%;
-        border-radius: 20px;
+        border-radius: 4px;
         background-color: var(--title-color);
     }
 
