--- a/style/style.css
+++ b/style/style.css
@@ -272,6 +272,28 @@ header {
     }
 }
 
+.p100{width:100%}
+.p95{width:95%}
+.p90{width:90%}
+.p85{width:85%}
+.p80{width:80%}
+.p75{width:75%}
+.p70{width:70%}
+.p65{width:65%}
+.p60{width:60%}
+.p55{width:55%}
+.p50{width:50%}
+.p45{width:45%}
+.p40{width:40%}
+.p35{width:35%}
+.p30{width:30%}
+.p25{width:25%}
+.p20{width:20%}
+.p15{width:15%}
+.p10{width:10%}
+.p05{width:05%}
+.p00{width:00%}
+
     #status_bar h4
     {
         margin-bottom:5px;
