--- a/style/style.css
+++ b/style/style.css
@@ -94,6 +94,19 @@ a, a:hover, a:focus, a:active {
     max-width:30px;
 }
 
+#social_icon{
+    /* filter: invert(100%) sepia(0%) saturate(7498%) hue-rotate(186deg) brightness(114%) contrast(101%); */
+    filter: invert(78%) sepia(10%) saturate(21%) hue-rotate(1deg) brightness(86%) contrast(87%);
+    width: 20px;
+    padding-left:20px;
+}
+@media only screen and (max-width: 800px) {
+    #social_icon{
+        width: 12px;
+        padding-left:12px;
+    }
+}
+
 
 /*Header part*/
 header {
