--- a/style/style.css
+++ b/style/style.css
@@ -46,7 +46,7 @@ p{
 }
 @media only screen and (min-width: 1200px) {
     *{
-        font-size:25px;
+        font-size:18px;
     }
 }
 
@@ -95,11 +95,14 @@ a, a:hover, a:focus, a:active {
 }
 
 #social_icon{
-    /* filter: invert(100%) sepia(0%) saturate(7498%) hue-rotate(186deg) brightness(114%) contrast(101%); */
-    filter: invert(78%) sepia(10%) saturate(21%) hue-rotate(1deg) brightness(86%) contrast(87%);
+    filter: invert(100%) sepia(0%) saturate(7498%) hue-rotate(186deg) brightness(114%) contrast(101%);
+    /* filter: invert(78%) sepia(10%) saturate(21%) hue-rotate(1deg) brightness(86%) contrast(87%); */
     width: 20px;
-    padding-left:20px;
+    /* padding-left:20px; */
+    padding-left:10%;
+    margin-top:7px;
 }
+
 @media only screen and (max-width: 800px) {
     #social_icon{
         width: 12px;
@@ -223,7 +226,7 @@ header {
 
     @media only screen and (min-width: 1200px) {
         #detail_fa{
-            font-size:20px;
+            font-size:16px;
         }
         #web_page_fa{
             font-size:20px;
@@ -237,9 +240,13 @@ header {
 
 
 
-    #web_page , #web_page_fa{
+    #web_page , #web_page_fa, #social_web_page{
         color:#aaa;
         font-style: italic;
+    }
+    #social_web_page
+    {
+        color:#fff;
     }
 
     #web_page_fa{
@@ -314,14 +321,14 @@ header {
     }
 
     #status_bar div{
-        width:100%;
+        /* width:100%; */
         height:20px;
         border-radius: 4px;
         background-color: var(--title-color-fade);
     }
 
     #status_bar div div{
-        width:40%;
+        /* width:40%; */
         height:100%;
         border-radius: 4px;
         background-color: var(--title-color);
