Some style bug solved

--- a/style/style.css
+++ b/style/style.css
@@ -240,6 +240,7 @@ header {
         padding-top:20px;
         padding-bottom:10px;
         width:100%;
+        box-sizing:border-box;
     }
     
     #body #detail, #detail_fa{
