--- a/style/style.css
+++ b/style/style.css
@@ -250,7 +250,8 @@ header {
     #body #detail, #detail_fa{
         padding:7px 10%;
         word-wrap: break-word;
-        width:80%;
+        width:100%;
+        box-sizing: border-box;
     }
 
     #detail_fa{
