--- a/style/style.css
+++ b/style/style.css
@@ -475,3 +475,10 @@ header {
     #image_2:hover, #image_3:hover, #image_3_2:hover{
         filter: grayscale(100%);
     }
+
+    #logo{
+        padding:7%;
+        padding-top:0;
+        width:20%;
+        opacity: 0.7;
+    }
