--- a/style/style.css
+++ b/style/style.css
@@ -403,7 +403,7 @@ header {
     padding-right:5%;
     display:flex;
     flex-wrap: wrap;
-    align-items: flex-end;
+    align-items: flex-start;
     justify-content: space-between;
     margin-bottom:5px;
 }
