--- a/style/style.css
+++ b/style/style.css
@@ -218,7 +218,7 @@ header {
     header #image-print{
         border-radius: 30px;
         width:170px;
-        height: 170px;
+        height: 250;
         margin:auto;
         margin-left:20px;
     }
